--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "bulma": "^0.9.4",
     "next": "12.1.6",
     "react": "18.1.0",
