--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@types/react-scroll": "^1.8.3",
     "bulma": "^0.9.4",
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
