--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@types/react-scroll": "^1.8.3",
     "bulma": "^0.9.4",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "^12.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
-    "@types/react": "18.0.9",
-    "@types/react-dom": "18.0.4",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "typescript": "4.6.4"
