--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@artsy/fresnel": "^3.5.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@types/react-scroll": "^1.8.3",
     "bulma": "^0.9.4",
