--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@artsy/fresnel": "^3.5.0",
     "@fortawesome/fontawesome-free": "^6.1.1",
     "@types/react-scroll": "^1.8.3",
+    "@types/react-typist": "^2.0.3",
     "bulma": "^0.9.4",
     "next": "^12.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scroll": "^1.8.7"
+    "react-scroll": "^1.8.7",
+    "react-typist": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
