--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bulma": "^0.9.4",
     "next": "^12.1.2",
     "react": "^17.0.2",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
     "react-scroll": "^1.8.7",
     "react-typist": "^2.0.5"
