--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
+    "react-github-calendar": "^3.3.1",
     "react-scroll": "^1.8.7",
     "react-typist": "^2.0.5"
   },
