--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-github-calendar": "^3.3.1",
     "react-scroll": "^1.8.7",
+    "react-tooltip": "^4.2.21",
     "react-typist": "^2.0.5"
   },
   "devDependencies": {
