--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-typist": "^2.0.3",
     "bulma": "^0.9.4",
     "next": "^12.1.2",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^17.0.2",
